fix for video on iphone

--- a/styles.css
+++ b/styles.css
@@ -417,12 +417,6 @@ headers
   }
 }
 /* video fix for iphone */
-.fix {
-  position: fixed;
-  z-index: -2;
-  width: 100vw;
-  height: 100vh;
-}
 
 /* video fix for iphone end */
 /*
@@ -432,6 +426,7 @@ header-video
 */
 .header-video {
   width: 00vw;
+  z-index: -5;
 }
 .header-container {
   margin-top: -1.4rem;
@@ -441,8 +436,11 @@ header-video
 }
 .header-video-potrait {
   width: 100vw;
+  height: 90vh;
   /* height: 100vh; */
   padding-top: 0;
+  
+  z-index: -5;
   /* height: 100vh; */
   -o-object-fit: cover;
   object-fit: cover;
@@ -460,17 +458,31 @@ header-video
     margin-top: 0rem;
     height: 100vh;
     width: 100vw;
+    z-index: -5;
     margin-bottom: 7rem;
   }
   .header-video {
     width: 100vw;
     object-fit: cover;
+    z-index: -5;
     -o-object-fit: cover;
   }
   .header-video-potrait {
     visibility: hidden;
+    z-index: -5;
   }
   /* margin: 0 auto; */
+}
+/* maybe a fix for autoplay on iphoes and video dim */
+header::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 110vh;
+  background: rgba(174, 177, 173, 0.057);
+  /* z-index: ; */
 }
 /*
 =============== 
